test/lattests/bad/callToNonFunction.lat
int main() {
    int a = 42;
    a(2);
}